converted to python3

--- a/genewiki/config/genewiki_celery.conf
+++ b/genewiki/config/genewiki_celery.conf
@@ -1,7 +1,7 @@
 ; /etc/supervisor/conf.d/genewiki_celery.conf
 [program:genewiki_celery]
 
-command = celery --app=genewiki.common worker -B -E
+command = celery --app=genewiki.common.celeryapp worker -B -E
 directory = /home/ubuntu/webapps/genewiki
 
 user = deploy
