--- a/genewiki/requirements.txt
+++ b/genewiki/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.6.5
-MySQL-python==1.2.5
+mysqlclient==1.3.7
+SPARQLWrapper==1.7.6
 South==1.0
 Werkzeug==0.9.6
 amqp==1.4.5
@@ -16,8 +17,11 @@ djangorestframework==2.3.14
 flake8==2.2.2
 gnureadline==6.3.3
 gunicorn==19.0.0
+html5lib==0.9999999
 httplib2==0.9
 ipython==2.1.0
+isodate==0.5.4
+keepalive==0.5
 kombu==3.0.21
 mccabe==0.2.1
 mwclient==0.7.2
@@ -25,11 +29,12 @@ mygene==2.1.0
 pep8==1.5.7
 pyflakes==0.8.1
 pyjade==2.2.0
+pyparsing==2.0.7
 pytz==2014.4
 raven==5.0.0
+rdflib==4.2.1
 redis==2.10.1
 requests==2.7.0
 simplejson==3.5.3
 six==1.9.0
 sqlparse==0.1.11
-wsgiref==0.1.2
